# idna_adapter

./: Cargo.toml  README.md
src/: lib.rs
