[package]
name = "idna_adapter"
version = "1.1.0"
rust-version = "1.57" # Match the idna crate
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["The rust-url developers"]
readme = "README.md"
description = "Back end adapter for idna"
categories = ["no-std", "internationalization"]
keywords = ["unicode", "dns", "idna"]
documentation = "https://docs.rs/idna_adapter/latest/idna_adapter/"
homepage = "https://docs.rs/crate/idna_adapter/latest" # README link
repository = "https://github.com/hsivonen/idna_adapter"

[dependencies]
idna_mapping = "1.0.0"
unicode-bidi = { version = "0.3.10", default-features = false, features = ["hardcoded-data"] }
unicode-normalization = { version = "0.1.22", default-features = false }

[features]
compiled_data = []
